--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Environment variables
 .env
+.env.local
+.env.*.local
+oauth_tokens.txt
 
-# Cache directory and database
-cache/
-*.db
+# Cache files
+cache/*
 
 # Python
 __pycache__/
@@ -11,35 +13,24 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+.ruff_cache/
 
-# Virtual environments
-venv/
-env/
-ENV/
+# uv
 .venv
+uv.lock
+
+# Node
+node_modules/
+package-lock.json
 
 # IDE
-.vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
+
+# Git
+.git/
